[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project]
name = "tls-impersonate-proxy"
version = "0.1.0"
description = "HTTP/HTTPS proxy that impersonates browser TLS fingerprints using curl_cffi"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "curl_cffi>=0.7.0",
    "cryptography>=42.0.0",
]

[project.scripts]
tls-impersonate-proxy = "app.tls_impersonate_proxy:main"

[project.optional-dependencies]
dev = [
    "basedpyright>=1.20.0",
    "ruff>=0.8.0",
    "pytest>=7.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
]
ignore = [
    "E501",
    "SIM108",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownLambdaType = "none"
reportUnknownParameterType = "none"
reportGeneralTypeIssues = "none"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportOptionalMemberAccess = "none"
reportPossiblyUnboundVariable = "none"
include = ["app"]
exclude = ["**/node_modules", "**/__pycache__", "venv", ".venv"]
